gateway-api/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx
spec:
  controllerName: gateway.nginx.org/nginx-gateway-controller

---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: airbnb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    - name: https-airbb
      port: 443
      protocol: HTTPS
      hostname: airbb.serghini.me        
      tls:
        mode: Terminate
        certificateRefs:
          - name: airbb-serghini-me-tls
            namespace: airbnb
      allowedRoutes:
        namespaces:
          from: All

    - name: https-argocd
      port: 443
      protocol: HTTPS
      hostname: argocd.airbb.serghini.me  
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-airbb-serghini-me-tls
            namespace: argocd
      allowedRoutes:
        namespaces:
          from: All
