gateway-api/minio-argocd-routes.yml
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-route
  namespace: airbnb
spec:
  parentRefs:
    - name: main-gateway
      namespace: airbnb
      sectionName: https-airbb
  hostnames:
    - "airbb.serghini.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /storage
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /   
      backendRefs:
        - name: minio
          port: 9000

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: airbnb      
      sectionName: https-argocd
  hostnames:
    - "argocd.airbb.serghini.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 443
